--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -21,6 +21,13 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+    - name: Test with Gradle
+      run: ./gradlew test
+    - name: Publish Test Report
+      uses: mikepenz/action-junit-report@v3
+      if: always() # always run even if the previous step fails
+      with:
+        report_paths: '**/build/test-results/test/TEST-*.xml'
     - name: Run check style
       uses: nikitasavinov/checkstyle-action@master
       with:
