--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -22,6 +22,8 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: 'gradle'
+      - name: Docker run
+        run: docker compose up -d
       - name: Test with Gradle
         run: ./gradlew test
       - name: Publish Test Report
