--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -1,16 +1,14 @@
-name: Checkstyle
+name: Checkstyle & JUnit Test
 
 on:
+  workflow_dispatch:
   push:
     branches: [ main ]
   pull_request:
     branches:
 
-permissions:
-  contents: read
-
 jobs:
-  checkstyle:
+  build:
 
     runs-on: ubuntu-latest
 
@@ -33,6 +31,7 @@ jobs:
           report_paths: '**/build/test-results/test/TEST-*.xml'
       - name: Run check style
         uses: nikitasavinov/checkstyle-action@master
+        if: always()
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: 'github-pr-check'
