--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -30,7 +30,10 @@ jobs:
         uses: mikepenz/action-junit-report@v3
         if: always() # always run even if the previous step fails
         with:
+          name: Maven Tests
           report_paths: '**/build/test-results/test/TEST-*.xml'
+          reporter: java-junit
+          fail-on-error: true
       - name: Run check style
         uses: nikitasavinov/checkstyle-action@master
         with:
