--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -27,13 +27,10 @@ jobs:
       - name: Test with Gradle
         run: ./gradlew test
       - name: Publish Test Report
-        uses: mikepenz/action-junit-report@v3
-        if: always() # always run even if the previous step fails
+        if: cancelled() != true
+        uses: mikepenz/action-junit-report@v2
         with:
-          name: Maven Tests
           report_paths: '**/build/test-results/test/TEST-*.xml'
-          reporter: java-junit
-          fail-on-error: true
       - name: Run check style
         uses: nikitasavinov/checkstyle-action@master
         with:
