--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -1,16 +1,14 @@
-name: Checkstyle
+name: Checkstyle & JUnit Test
 
 on:
+  workflow_dispatch:
   push:
     branches: [ main ]
   pull_request:
     branches:
 
-permissions:
-  contents: read
-
 jobs:
-  checkstyle:
+  build:
 
     runs-on: ubuntu-latest
 
@@ -27,12 +25,13 @@ jobs:
       - name: Test with Gradle
         run: ./gradlew test
       - name: Publish Test Report
-        if: cancelled() != true
-        uses: mikepenz/action-junit-report@v2
+        uses: mikepenz/action-junit-report@v3
+        if: always() # always run even if the previous step fails
         with:
           report_paths: '**/build/test-results/test/TEST-*.xml'
       - name: Run check style
         uses: nikitasavinov/checkstyle-action@master
+        if: always()
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: 'github-pr-check'
