--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Checkstyle & JUnit Test
+name: junit test & checkstyle & spotbugs & code coverage
 
 on:
   workflow_dispatch:
@@ -47,3 +47,14 @@ jobs:
         with:
           name: test results
           path: build/reports/spotbugs/main.html
+      #        TO DO CIを1つにする時、失敗した時送る処理
+      - name: Slack Notification
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_CHANNEL: general
+          SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#ff00ff'
+          SLACK_ICON: https://github.com/rtCamp.png?size=48
+          SLACK_MESSAGE: 'Post Content :rocket:'
+          SLACK_TITLE: Post Title
+          SLACK_USERNAME: rtCamp
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
