--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,6 @@
 name: junit test & checkstyle & spotbugs & code coverage
 
 on:
-  workflow_dispatch:
   push:
     branches: [ main ]
   pull_request:
@@ -46,7 +45,7 @@ jobs:
         uses: actions/upload-artifact@v1
         if: always()
         with:
-          name: SpotBugs_test_report
+          name: SpotBugsTestReport
           path: build/reports/spotbugs/main.html
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
