--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,10 @@ group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
+apply plugin: 'java'
+compileJava {options.encoding = "UTF-8"}
+compileTestJava {options.encoding = "UTF-8"}
+
 repositories {
     mavenCentral()
 }
