--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'mysql:mysql-connector-java'
-    implementation group: 'com.github.database-rider', name: 'rider-spring', version: '1.32.3'
+    testImplementation group: 'com.github.database-rider', name: 'rider-spring', version: '1.32.3'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.2'
     testImplementation group: 'org.mockito', name: 'mockito-inline', version: '2.7.21'
